fix(layout): change layout z-index to be able to click on link (#11)

--- a/src/styles/experiences.scss
+++ b/src/styles/experiences.scss
@@ -7,8 +7,6 @@
   width: 35%;
   height: 100%;
   overflow-y: scroll;
-  position: relative;
-  z-index: 10;
   -ms-overflow-style: none;
   scrollbar-width: none;
 
